# plotIt

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  setup_sl6_env.sh
examples/: example.yml  example_files.yml  example_folders.yml  example_trees.yml  example_with_groups.yml
include/: TH1Plotter.h  defines.h  plotIt.h  summary.h  systematics.h  types.h  utilities.h
include/samadhi/: Database.h  Tables.h
src/: TH1Plotter.cc  plotIt.cc  samadhi.cc  summary.cc  systematics.cc  types.cc  utilities.cc
test/: database.yml  example.yml  example_db.yml  example_files.yml  example_trees.yml  example_with_groups.yml  generate_files.C  generate_files_folders.C  generate_trees.C  policy.xml  run_tests.sh  tests.py
test/TTAnalysis/: TT_config_ElEl.yml  TT_config_ElMu.yml  TT_config_MuEl.yml  TT_config_MuMu.yml  TT_files_MC.yml  TT_mtt_resolution.yml  TT_plots_ElEl.yml  TT_plots_ElMu.yml  TT_plots_MuEl.yml  TT_plots_MuMu.yml  TT_plots_base.yml  TT_yields_base.yml  TTconfig.yml  TTfiles.yml  TTplots.yml  create_plots.sh
test/unit_tests/: configuration.py  tests.py
